--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "billyp-types",
+	"name": "btbot-types",
 	"version": "1.0.2",
 	"description": "a shared types package for billy suite",
 	"main": "lib/index.js",
