--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,8 @@
   "editor.tabSize": 4,
   "editor.insertSpaces": false,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
+	"source.fixAll.eslint": "explicit"
+},
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
